--- a/Pet App/Pet_App/Pet_App.csproj
+++ b/Pet App/Pet_App/Pet_App.csproj
@@ -66,7 +66,7 @@
     <Compile Include="View\MainViewMaster.xaml.cs">
       <DependentUpon>MainViewMaster.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModel\MainViewMenuItem.cs" />
+    <Compile Include="Model\MainViewMenuItem.cs" />
     <Compile Include="View\RegisterSplashView.xaml.cs">
       <DependentUpon>RegisterSplashView.xaml</DependentUpon>
     </Compile>
